Fix sectioned rows display: hide row ID

--- a/gtpb_clientside/WEB-INF/templates/gui/pane2/sectioned_body.vm
+++ b/gtpb_clientside/WEB-INF/templates/gui/pane2/sectioned_body.vm
@@ -40,7 +40,7 @@
         #set($table = $field.getReportCalcField().getReportFieldIsFrom().getParentTable())
       #end
     #end
-    ## NOTE: hack on this line to check for a particular field for CH recipe printout
+    ## NOTE: awful hack on this line to check for a particular field for CH recipe printout
     ## TODO: something more generic, e.g. a calc. unique property
     #if( ($headingTables.contains($table) && $field.isPrimaryKey()) || (($field.getInternalFieldName() == "sfmak3xhc4p2mczux") && ($rowCount > 2)))
       #if($cell != $lastValues.get($cellNumber))
