--- a/gtpb_clientside/WEB-INF/templates/gui/pane2/sectioned_detail_row.vm
+++ b/gtpb_clientside/WEB-INF/templates/gui/pane2/sectioned_detail_row.vm
@@ -35,7 +35,7 @@
         #set($detailCalc = true)
       #end
     #end
-    #if((($detailTables.contains($field.getTableContainingField()) && !$isCalc) || ($detailCalc)) ) ##&& (!$field.isPrimaryKey())
+    #if( ( (($detailTables.contains($field.getTableContainingField()) && !$isCalc) || $detailCalc) ) && (!$field.isPrimaryKey()) )
       #set($rightAlign = false)
       #set($fieldCategory = $field.getFieldCategory().toString())
       #if(($fieldCategory == "NUMBER") || ($fieldCategory == "SEQUENCE"))
