--- a/gtpb_clientside/WEB-INF/templates/gui/pane2/include_delete_checkboxes.vm
+++ b/gtpb_clientside/WEB-INF/templates/gui/pane2/include_delete_checkboxes.vm
@@ -39,7 +39,8 @@
 #end
 #end
 #if($data_part_only)
-  #if($sessionReport.getReportStyle() == "SECTIONED")
+	#set($reportStyle = $sessionReport.getReportStyle())
+  #if($reportStyle && ($reportStyle != "SPREADSHEET"))
     #parse('gui/pane2/sectioned_calcs.vm')
     #parse('gui/pane2/sectioned_body.vm')
   #else
