Add a report style: single heading

--- a/gtpb_clientside/WEB-INF/templates/gui/pane2/sectioned_body.vm
+++ b/gtpb_clientside/WEB-INF/templates/gui/pane2/sectioned_body.vm
@@ -79,7 +79,7 @@
           #end
         </tr>
         ## A subheading row for the detail field names
-        #if($headingLevel == $headingTables.size())
+        #if(($headingLevel == $headingTables.size()) && ($reportStyle == "SECTIONED"))
           #set($headingRow=true)
           #parse("gui/pane2/sectioned_detail_row.vm")
         #end
