Add a report style: single heading: debug

--- a/gtpb_clientside/WEB-INF/templates/gui/pane2/pane2.vm
+++ b/gtpb_clientside/WEB-INF/templates/gui/pane2/pane2.vm
@@ -56,7 +56,8 @@
 	      }
 	#if($browser != "Internet Explorer" && !$mobile_device)
 	/* for fixed (frozen) table header */
-    #if($sessionReport.getReportStyle() != "SECTIONED")
+	  #set($reportStyle = $sessionReport.getReportStyle())
+    #if(($reportStyle != "SECTIONED") && ($reportStyle != "ONE_SECTION"))
   		div#wrapper table#reportData {
   		margin-top: 30px;
   		}
