--- a/gtpb_clientside/WEB-INF/templates/gui/pane2/see_more_rows.vm
+++ b/gtpb_clientside/WEB-INF/templates/gui/pane2/see_more_rows.vm
@@ -20,7 +20,8 @@
 #set($totalRows = $sessionReport.getRowCount())
 #set($totalRowsIsEstimate = $sessionReport.isRowCountEstimate())
 <tr class="seemorerows">
-  #if($sessionReport.getReportStyle() == "SECTIONED")
+	#set($reportStyle = $sessionReport.getReportStyle())
+  #if(($reportStyle == "SECTIONED") || ($reportStyle == "ONE_SECTION"))
     #set($numCols = $numDetailFields + 2)
   #else
     #set($numCols = $firstRowCells.size() + 2)
