--- a/gtpb_clientside/WEB-INF/templates/gui/reports_and_tables/report_data.vm
+++ b/gtpb_clientside/WEB-INF/templates/gui/reports_and_tables/report_data.vm
@@ -29,7 +29,8 @@
   #if(!$sessionReport)## allow overrides
     #set($sessionReport=$sessionData.getReport())##
   #end##
-  #set($sectionedReport = ($sessionReport.getReportStyle() == "SECTIONED"))
+	#set($reportStyle = $sessionReport.getReportStyle())
+  #set($sectionedReport = ($reportStyle == "SECTIONED") || ($reportStyle == "ONE_SECTION"))
   #set($sessionTable=$sessionReport.getParentTable())##
   #set($return='gui/reports_and_tables/pane3')##
   #set($pane1_id="$sessionTable.getInternalTableName()$sessionReport.getInternalReportName()")##
