--- a/gtpb_clientside/WEB-INF/templates/gui/pane2/sectioned_body.vm
+++ b/gtpb_clientside/WEB-INF/templates/gui/pane2/sectioned_body.vm
@@ -68,10 +68,10 @@
               #if($field.getClass().getSimpleName() == "CalculationFieldDefn")
                 #set($reportCalcField = $field.getReportCalcField())
                 #if($headingCalcMap.get($reportCalcField) == $headingLevel)
-                  <span style="float:right" #if($cellNumber > 2) class="smaller" #end>&nbsp;&nbsp;&nbsp;&nbsp;<span style="text-transform:capitalize">$field</span> = $testCell</span>
+                  <span style="float:right" #if($testCellNumber > 2) class="smaller" #end>&nbsp;&nbsp;&nbsp;&nbsp;<span style="text-transform:capitalize">$field</span> = $testCell</span>
                 #end
               #elseif((!$field.isPrimaryKey()) && $field.getTableContainingField().equals($table))
-                <span #if($cellNumber > 2) class="smaller" #end><span style="text-transform:capitalize">$field $cellNumber</span>: $testCell &nbsp;&nbsp;&nbsp;&nbsp;</span>
+                <span #if($testCellNumber > 2) class="smaller" #end><span style="text-transform:capitalize">$field</span>: $testCell &nbsp;&nbsp;&nbsp;&nbsp;</span>
               #end
             #end
           </td>
