--- a/gtpb_clientside/WEB-INF/templates/gui/pane2/sectioned_body.vm
+++ b/gtpb_clientside/WEB-INF/templates/gui/pane2/sectioned_body.vm
@@ -72,7 +72,7 @@
                   <span style="float:right" #if($testCellNumber > 3) class="smaller" #end>&nbsp;&nbsp;&nbsp;&nbsp;<span style="text-transform:capitalize">$field</span> = $testCell</span>
                 #end
               #elseif((!$field.isPrimaryKey()) && $field.getTableContainingField().equals($table))
-                <span #if($testCellNumber > 3) class="smaller" #end><span style="text-transform:capitalize">$field $testCellNumber</span>: $testCell &nbsp;&nbsp;&nbsp;&nbsp;</span>
+                <span #if($testCellNumber > 3) class="smaller" #end><span style="text-transform:capitalize">$field</span>: $testCell &nbsp;&nbsp;&nbsp;&nbsp;</span>
               #end
             #end
           </td>
