--- a/gtpb_clientside/WEB-INF/templates/gui/pane2/sectioned_body.vm
+++ b/gtpb_clientside/WEB-INF/templates/gui/pane2/sectioned_body.vm
@@ -67,10 +67,12 @@
               #set($field = $fields.get($testCellNumber))
 							#if($testCellNumber == 4) <br style="clear:both" /> #end
               #if($field.getClass().getSimpleName() == "CalculationFieldDefn")
-                #set($reportCalcField = $field.getReportCalcField())
-                #if($headingCalcMap.get($reportCalcField) == $headingLevel)
-                  <span style="float:right" #if($testCellNumber > 3) class="smaller" #end>&nbsp;&nbsp;&nbsp;&nbsp;<span style="text-transform:capitalize">$field</span> = $testCell</span>
-                #end
+								#if(!$field.getReportCalcField().isReportHidden())
+                  #set($reportCalcField = $field.getReportCalcField())
+                  #if($headingCalcMap.get($reportCalcField) == $headingLevel)
+                    <span style="float:right" #if($testCellNumber > 3) class="smaller" #end>&nbsp;&nbsp;&nbsp;&nbsp;<span style="text-transform:capitalize">$field</span> = $testCell</span>
+  								#end
+							  #end
               #elseif((!$field.isPrimaryKey()) && $field.getTableContainingField().equals($table))
                 <span #if($testCellNumber > 3) class="smaller" #end><span style="text-transform:capitalize">$field</span>: $testCell &nbsp;&nbsp;&nbsp;&nbsp;</span>
               #end
