Prep for tabs with no content marking

--- a/gtpb_clientside/WEB-INF/templates/gui/reports_and_tables/tabs/tabs_active.vm
+++ b/gtpb_clientside/WEB-INF/templates/gui/reports_and_tables/tabs/tabs_active.vm
@@ -13,7 +13,7 @@
 			#set($filters = $viewTools.getNewFilterMap())
 			#set($success = $filters.put($field, $rowId))
 			## use a report row limit of 1, we are only checking for the existence of any rows
-			#set($rows = $view.getReportDataRows($tabReport, 1, $filters, true)
+			#set($rows = $view.getReportDataRows($tabReport, 1, $filters, true))
 			#if($rows.size() > 0)
 			  $tabTable.getInternalTableName()<br/>
 			#end
