--- a/gtpb_clientside/WEB-INF/templates/gui/resources/input/input.vm
+++ b/gtpb_clientside/WEB-INF/templates/gui/resources/input/input.vm
@@ -44,7 +44,7 @@
   #if($singleColumn)
     <img src="resources/icons/comment.png" class="comment_toggle" title="add a comment" alt="add comment"/>
   #end
-  <div class="add_comment_row">Add comment: <input type="text" class="comment_input" rowid="$sessionRowId" internalfieldname="$field.getInternalFieldName()" internaltablename="$sessionTable.getInternalTableName()"/><input type="button" value="add" /></div>
+  <div class="add_comment_row"><input type="text" class="comment_input" placeholder="Add message" rowid="$sessionRowId" internalfieldname="$field.getInternalFieldName()" internaltablename="$sessionTable.getInternalTableName()"/><input type="button" value="add" /></div>
   <div class="comments" id="comments_$field.getInternalFieldName()">
     #parse("gui/resources/input/comments.vm")
   </div>
