--- a/gtpb_clientside/WEB-INF/templates/gui/resources/input/comment_feed.vm
+++ b/gtpb_clientside/WEB-INF/templates/gui/resources/input/comment_feed.vm
@@ -15,7 +15,7 @@
 ##  You should have received a copy of the GNU General Public License
 ##  along with agileBase.  If not, see <http://www.gnu.org/licenses/>.
 ##
-<div class="add_comment_row" style="display:block"><input type="text" class="comment_input" placeholder="Add message" rowid="$sessionRowId" internalfieldname="$field.getInternalFieldName()" internaltablename="$sessionTable.getInternalTableName()"/><input type="button" value="add" /></div>
+<div class="comment_feed" style="display:block"><input type="text" class="comment_input" placeholder="Add message" rowid="$sessionRowId" internalfieldname="$field.getInternalFieldName()" internaltablename="$sessionTable.getInternalTableName()"/><input type="button" value="add" /></div>
 <div class="comments" id="comments_$field.getInternalFieldName()">
   #parse("gui/resources/input/comments.vm")
 </div>
