--- a/gtpb_clientside/WEB-INF/templates/gui/resources/input/input.vm
+++ b/gtpb_clientside/WEB-INF/templates/gui/resources/input/input.vm
@@ -46,10 +46,12 @@
       <img src="resources/icons/comment.png" class="comment_toggle" title="add a comment" alt="add comment"/>
     #end
     <div class="add_comment_row"><input type="text" class="comment_input" placeholder="Add message" rowid="$sessionRowId" internalfieldname="$field.getInternalFieldName()" internaltablename="$sessionTable.getInternalTableName()"/><input type="button" value="add" /></div>
-  #end
-	<div class="comments" id="comments_$field.getInternalFieldName()">
-    #parse("gui/resources/input/comments.vm")
-  </div>
+	#end
+	#if($userCanEdit || $hasComments)
+  	<div class="comments" id="comments_$field.getInternalFieldName()">
+      #parse("gui/resources/input/comments.vm")
+    </div>
+	#end
 #end
 #if(!$singleColumn)
   <br clear="right">
