--- a/gtpb_clientside/WEB-INF/templates/gui/pane2/pane2.vm
+++ b/gtpb_clientside/WEB-INF/templates/gui/pane2/pane2.vm
@@ -104,10 +104,11 @@
 	#else
 	  #if($isNotTable)
       <script type="text/javascript">
-        top.document.getElementById('filter').setAttribute('disabled','true');
+        jqDoc.find('#filter').attr('disabled','true');
       </script>
       #end
 	  #if($isNotTable||$view.loggedInUserAllowedTo('EDIT_TABLE_DATA',$sessionTable))
+			#set($filtersShouldBeShown = ($sessionData.getCustomString('filtering_on')=='true'))
   	    <script language=Javascript>
          var jqDoc = $(top.document);
    	     jqDoc.find('#button_new').removeAttr('disabled');
@@ -119,6 +120,12 @@
          jqDoc.find('#button_fullscreen').removeAttr('disabled');
          jqDoc.find('#button_apps').removeAttr('disabled');
          jqDoc.find('#button_forms').removeAttr('disabled');
+				 #if($filtersShouldBeShown)
+				   var jqFilter = jqDoc.find('#filter');
+					 if (!jqFilter.hasClass('selected')) {
+					   jqFilter.click();
+					 }
+				 #end
         </script>
       #else
       <script language=Javascript>
