Filters on by default for full pane users

--- a/gtpb_clientside/WEB-INF/templates/gui/pane2/pane2_head.vm
+++ b/gtpb_clientside/WEB-INF/templates/gui/pane2/pane2_head.vm
@@ -47,7 +47,7 @@
 ## filtersShouldBeShown should either print the string 'true' or 'false'
 #set($report = $sessionData.getReport())
 #set($viewingTable = $report.equals($report.getParentTable().getDefaultReport()))
-<tr name="fieldFilters" id="fieldFilters" #if($filtersShouldBeShown == 'false') style="display:none" #end>
+<tr name="fieldFilters" id="fieldFilters" #if(!$filtersShouldBeShown) style="display:none" #end>
   <td class="leading">#if($mobile_device)&nbsp;#else<div id="filterhelp">?</div><div class="ab_tooltip" rel="resources/reports/filtering_help.htm"></div>#end</td>
   #foreach($field in $fields)
     #set($internalFieldName = $field.getInternalFieldName())
