--- a/gtpb_clientside/WEB-INF/templates/gui/pane2/pane2.vm
+++ b/gtpb_clientside/WEB-INF/templates/gui/pane2/pane2.vm
@@ -106,13 +106,16 @@
       <script type="text/javascript">
         jqDoc.find('#filter').attr('disabled','true');
       </script>
-      #end
+		#end
+    #set($filtersShouldBeShown = false)
+		#if(($resource_folder!='user') && ($resource_folder!='roles'))
+  		#set($sessionFilterString = $sessionData.getCustomString('filtering_on'))
+  		#set($filtersShouldBeShown = ($sessionFilterString=='true'))
+  		#if($viewTools.isNull($sessionFilterString) && ($view.getLoggedInUser().getUserType() == "REPORT"))
+  			#set($filtersShouldBeShown = true)
+  		#end
+		#end
 	  #if($isNotTable||$view.loggedInUserAllowedTo('EDIT_TABLE_DATA',$sessionTable))
-			#set($sessionFilterString = $sessionData.getCustomString('filtering_on'))
-			#set($filtersShouldBeShown = ($sessionFilterString=='true'))
-			#if($viewTools.isNull($sessionFilterString) && ($view.getLoggedInUser().getUserType() == "REPORT"))
-				#set($filtersShouldBeShown = true)
-			#end
 	    <script language=Javascript>
        var jqDoc = $(top.document);
  	     jqDoc.find('#button_new').removeAttr('disabled');
@@ -253,20 +256,12 @@
   #end
   
   #set($filters = $sessionData.getReportFilterValues())
-  #if(($sessionData.getCustomString('filtering_on')=='true') || $mobile_device)
-    #set($filtersShouldBeShown='true')
-  #else
-    #set($filtersShouldBeShown='false')
-  #end
-  #if ($resource_folder=='user' || $resource_folder=='roles')
-    #set($filtersShouldBeShown='false')
-  #end
   <body #if(!$mobile_device) onload="#if($selection||($data.size()==0))loadPane3(); #else eval(document.getElementById('reportBody').rows[0].getAttribute('onclick')); #end" #end>
     <div id=wrapper>
 	  #if($mobile_device)
 		  #parse("gui/mobile/pane2_header.vm")
 	  #end
-	  <table id=reportData cellspacing="0" #if($filtersShouldBeShown == 'true') class='lowered' #end>
+	  <table id=reportData cellspacing="0" #if($filtersShouldBeShown) class='lowered' #end>
     	#set($reportStyle = $sessionReport.getReportStyle())
       #if($reportStyle && ($reportStyle != "SPREADSHEET"))
         ## First work out heading levels
