Editing relation shouldn't set session table

--- a/gtpb_clientside/WEB-INF/templates/gui/resources/input/relation.vm
+++ b/gtpb_clientside/WEB-INF/templates/gui/resources/input/relation.vm
@@ -91,7 +91,7 @@
 	  ## then click 'New' to add additional records, the same relation value is used
     gtpb_update_record="true" ##
     gtpb_internaltablename="$internalTableName"
-    gtpb_set_table="$internalTableName"
+    ##gtpb_set_table="$internalTableName"
     gtpb_rowid="$sessionRowId"
     gtpb_rowidinternaltablename="$relatedTable.getInternalTableName()"##
     gtpb_set_row_id="$fieldValue"##
