Don't show calc. definitions in tooltips

--- a/gtpb_clientside/WEB-INF/templates/gui/reports_and_tables/field_tooltip.vm
+++ b/gtpb_clientside/WEB-INF/templates/gui/reports_and_tables/field_tooltip.vm
@@ -1,7 +1,7 @@
 #set($internalReportFieldName = $sessionData.getCustomString("tooltip_internalfieldname"))
 #set($reportField = $sessionData.getReport().getReportField($internalReportFieldName))
 $reportField
-#if($reportField.getFieldDescription() && $reportField.getFieldDescription() != "")
+#if($reportField.getFieldDescription() && ($reportField.getFieldDescription() != "") && ($reportField.getClass().getSimpleName() != "ReportCalcFieldDefn"))
 	- $reportField.getFieldDescription()
 #end
 #set($displayDetails = true)
